Updated dockerfile to pull customizable base server and plugin files